japanse in progress

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -124,8 +124,11 @@
                     <!-- <button *ngIf="isBrandMatrixSurvey" (click)="changePage('previous')" mat-icon-button>
                         <mat-icon class="full-icon">chevron_left</mat-icon>
                     </button> -->
-                    <button style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey" (click)="changePage('previous')" mat-raised-button>
+                    <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage != 'Japanese'" (click)="changePage('previous')" mat-raised-button>
                         <mat-icon class="full-icon">chevron_left</mat-icon> Previous
+                    </button>
+                    <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage == 'Japanese'" (click)="changePage('previous')" mat-raised-button>
+                        <mat-icon class="full-icon">chevron_left</mat-icon> 戻る
                     </button>
                     <div *ngFor="let page of bmxPagesClient; let pageIndex = index">
                         <button disableRipple style="min-width: 35px;cursor: auto;outline: none;"
@@ -138,8 +141,11 @@
                             {{page.pageNumber}}
                         </button> -->
                     </div>
-                    <button style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey" (click)="changePage('next')" mat-raised-button>
-                        Continue<mat-icon class="full-icon">chevron_right</mat-icon>
+                    <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage != 'Japanese'" (click)="changePage('next')" mat-raised-button>
+                        Continue <mat-icon class="full-icon">chevron_right</mat-icon>
+                     </button>
+                    <button  style="background: #324395;color: white;" *ngIf="isBrandMatrixSurvey && surveyLanguage == 'Japanese'" (click)="changePage('next')" mat-raised-button>
+                        続き <mat-icon class="full-icon">chevron_right</mat-icon>
                      </button>
                     <!-- <button *ngIf="isBrandMatrixSurvey" (click)="changePage('next')" mat-icon-button>
                         <mat-icon class="full-icon">chevron_right</mat-icon>
