--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -369,7 +369,7 @@
 
   <!-- CONTACT 🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀-->
   <div class="report-container" [ngClass]="bmxClientPageDesignMode?'page-design':'page-design-client'" style="display: flex;
-    justify-content: center;" *ngIf="isMenuActive16">
+    justify-content: center;overflow: scroll;" *ngIf="isMenuActive16">
     <app-project-reports class="report-container" [isBrandMatrixSurvey]="isBrandMatrixSurvey"
       [isMenuActive16]="isMenuActive16" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
       [bmxClientPageOverview]="bmxClientPageOverview"></app-project-reports>
