project list calendar layout fixed

--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -76,7 +76,8 @@
             </div>
         </div>
         <!-- CALENDAR  📆📆📆📆📆📆📆📆📆-->
-        <div style="width: 25%;">
+        <div style="width: 25%;position: relative;
+        left: 40px;">
             <div style="width: 100%;">
                 <mat-card class="demo-inline-calendar-card">
                     <mat-calendar (selectedChange)="selected = $event"></mat-calendar>
