--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -22,3 +22,18 @@
     <div style="text-align: left;width: 300px;">email</div>
     <div style="text-align: left;width: 300px;">phone</div>
 </div> -->
+<!-- 
+<div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
+    <div style="font-family: auto;
+    font-size: 16px;
+    ">Name</div>
+    <div style="font-family: auto;
+    font-size: 16px;
+    font-style: italic;">title</div>
+    <div style="font-family: auto;
+    font-size: 16px;
+    font-style: italic;">email</div>
+    <div style="font-family: auto;
+    font-size: 16px;
+    font-style: italic;">phone</div>
+  </div> -->
