--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -259,7 +259,7 @@
 
 
 <!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
-<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' ||bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName " class="desktop">
+<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' || bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName " class="desktop">
     <div style="display: flex;flex-direction: column;padding-left: 40px;">
 
         <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}
@@ -428,7 +428,7 @@
 
 
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 TABLE 📱 MOBILE 📱 GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
-<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' ||bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[1].categoryName " class="mobile">
+<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' || bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName " class="mobile">
     <div style="display: flex;flex-direction: column;text-align: center;align-items: center;">
 
         <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">
@@ -497,6 +497,10 @@
                                     (change)="saveRadioColumValue(columnName, y)">
                             </div>
                         </div>
+<!-- 
+                        <img (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" class="row-box"
+                        style="width: 300px;" [src]="testName[columnName]"
+                        *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')"> -->
                         <!-- TEXT_AREA COMMENTS-->
                         <div style="display: flex;
                         justify-content: center;">
@@ -507,6 +511,7 @@
                                 [(ngModel)]="testName[columnName]" placeholder="comments" rows="4" cols="50"></textarea>
                         </div>
 
+                      
                         <!-- TEST NAME CELL -->
                         <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                               columnName.includes('Comments') != true &&
