special request compoenent debugging

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -497,10 +497,10 @@
                                     (change)="saveRadioColumValue(columnName, y)">
                             </div>
                         </div>
-<!-- 
+
                         <img (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" class="row-box"
                         style="width: 300px;" [src]="testName[columnName]"
-                        *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')"> -->
+                        *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
                         <!-- TEXT_AREA COMMENTS-->
                         <div style="display: flex;
                         justify-content: center;">
